# CPP-Projects

./: .gitignore.txt  1To100odd7.cpp  Alcoholic.cpp  Alcoholic.h  CMakeLists.txt  Drinks.cpp  Drinks.h  LICENSE  NoAlcoholic.cpp  NoAlcoholic.h  NonAlcoholic.h  Orders.cpp  Orders.h  README.md  Shop.cpp  Shop.h  User.cpp  User.h  main.cpp  test
Basic/: CMakeLists.txt  main.cpp
Basic/00Exercises/: ChangeNum.cpp  Ex111201.cpp  Ex111204.cpp  FahrenheitCelsius.cpp  HomeWork2.cpp  rowsCols.cpp
Basic/01Array/: AverageValue.cpp  SumColms.cpp  UmerenoTrudna.cpp  trudna.cpp
Basic/02Class and Object/: 02Movie.cpp  Ex141201.cpp  Recept.cpp  Zori.cpp
Basic/04Funkcii/: Ex2112.cpp  ex1.cpp  homeWork2.cpp
Basic/Array/: ArrElement.cpp  ArraySize.cpp  AverageValue.cpp  ChangeNumber.cpp  MagicCube.cpp  MaxMin.cpp  MaxMinElements.cpp  MonthsDays.cpp  TwoDimensionalArray.cpp  TwoFour.cpp  UmerenoTrudna.cpp  UmerenoTrudna2.cpp  ex1.cpp  lesna.cpp  mNk.cpp  trudna2.cpp
Basic/Class and Object/: Exam13.12.cpp  Radius.cpp  Radius2.cpp  Students.cpp  Students01.cpp
Basic/Ex080124/: main.cpp
Basic/Exercises/: 1To100odd7.cpp  CelsiusFahrenheit.cpp  ChangeNumWhile.cpp  Ex111202.cpp  Ex111203.cpp  Ex111205.cpp  HomeWork3.cpp  Narray.cpp  OneToSeven.cpp  Spirala.cpp  SrednaStoinostABS.cpp  arrWork.cpp  asdasdasdasd.cpp  sevanNumbers.cpp
Basic/String/: Ex0301.cpp  homeWork01.cpp  test.cpp  test.h
Basic/YouTube/: Person.h  main.cpp
Basic/functions/: Ex0301.cpp  ex2.cpp  homeWork.cpp  homeWork2.h
Basic/test/: 1.cpp  Diamond.cpp  Triangle.cpp  array.cpp  doWhile.cpp  threeDigitNumbers.cpp
Book0401/: Book.cpp
Car04.01/: Car.cpp  Car.h  CarService.h  main.cpp
CarGTP/: CMakeLists.txt  main.cpp
CarRental/: Car.cpp  FamilyCar.cpp  FamilyCar.h  LuxuryCar.h  main.cpp
CommissionEmployee/: CMakeLists.txt  CommissionEmployee.cpp  CommissionEmployee.h
Demo/: CMakeLists.txt
Demo/CrapsSimulation/: main.cpp
Demo/DefaultArguments/: main.cpp
Demo/DevStyler/: CMakeLists.txt
Demo/DevStyler/CommissionEmployee/: BasePlusCommissionEmployee.h
Demo/DevStyler/DerivedBaseClassObject/: CommissionEmployee.cpp
Demo/DevStyler/DerivedMemberFunction/: BasePlusCommissionEmployee.h
Demo/DevStyler2/CommissionBaseEmployee/: CommissionEmployee.cpp
Demo/DevStyler3/GradeBookMaxGrades/: main.cpp
Demo/DevStyler3/InlineCubeVolume/: main.cpp
Demo/DevStyler3/RecursiveFactorial/: CMakeLists.txt
Demo/DevStyler3/ReferencesInitialization/: CMakeLists.txt
Demo/DevStyler3/ScopeExample/: main.cpp
Demo/DevStyler3/TemplateMaximum/: Maximum.h
Demo/DevStyler3/UnaryScopeOperator/: CMakeLists.txt
Demo/GradeBookMaxGrades/: CMakeLists.txt
Demo/InlineCubeVolume/: CMakeLists.txt
Demo/IterativeFactorial/: main.cpp
Demo/NoArguments/: CMakeLists.txt
Demo/OverloadedFunctions/: CMakeLists.txt
Demo/RandomDie/: CMakeLists.txt
Demo/RandomIntegers/: main.cpp
Demo/RecursiveFactorial/: main.cpp
Demo/RecursiveFibonacci/: CMakeLists.txt  main.cpp
Demo/ReferencesInitialization/: main.cpp
Demo/ReferencesInitialization2/: CMakeLists.txt
Demo/RollDie/: main.cpp
Demo/ScopeExample/: CMakeLists.txt
Demo/SquareFunction/: CMakeLists.txt
DevStyler/CommissionEmployee/: CommissionEmployee.h
DevStyler/Demos/CommissionEmployee/: BasePlusCommissionEmployee.cpp  CMakeLists.txt  main.cpp
DevStyler/DerivedBaseClassObject/: main.cpp
DevStyler/DerivedMemberFunction/: CommissionEmployee.cpp
DevStyler/__MACOSX/Demos/Polymorphism/: ._.svn  CMakeLists.txt
DevStyler2/CommissionBaseEmployee/: BasePlusCommissionEmployee.cpp  CMakeLists.txt  CommissionEmployee.h  main.cpp
DevStyler3/ComparePassBy/: CMakeLists.txt
DevStyler3/CrapsSimulation/: CMakeLists.txt
DevStyler3/DefaultArguments/: CMakeLists.txt
DevStyler3/GradeBookMaxGrades/: GradeBook.h
DevStyler3/IterativeFactorial/: CMakeLists.txt
DevStyler3/NoArguments/: main.cpp
DevStyler3/OverloadedFunctions/: main.cpp
DevStyler3/RandomDie/: main.cpp
DevStyler3/RandomIntegers/: CMakeLists.txt
DevStyler3/RollDie/: CMakeLists.txt
DevStyler3/TemplateMaximum/: CMakeLists.txt
Even/Building/: Building.cpp  Building.h  CMakeLists.txt  House.cpp  House.h  main.cpp  task.h
Even/Date/: CMakeLists.txt  Date.cpp  Date.h  main.cpp
Even/LibraryManageSystem/: Book.cpp  Book.h  CMakeLists.txt  Member.cpp  Member.h  main.cpp
Even/Odd/: CMakeLists.txt  main.cpp  task.h
Even/Shape/: CMakeLists.txt  Circle.cpp  Circle.h  Regtangle.cpp  Regtangle.h  Shape.cpp  Shape.h  main.cpp  task.h
Even/ShuffleCards/: CMakeLists.txt  DeckOfCards.cpp  DeckOfCards.h  PlayingCard.cpp  PlayingCard.h  main.cpp
Even/test/: main.cpp
FileProcessing/ClientData/: CMakeLists.txt  ClientData.cpp  main.cpp
FileProcessing/Creat╨╡SequentalFile/: main.cpp
FileProcessing/Credit/: CMakeLists.txt  main.cpp
FileProcessing/ReadingPrintingSequentalFile/: CMakeLists.txt  main.cpp
FileProcessing/ReadingRandommAccessFileSequentally/: CMakeLists.txt  ClientData.cpp  ClientData.h  main.cpp
FileProcessing/TransactionProcessing/: CMakeLists.txt  ClientData.cpp  main.cpp  (+1 more)
GTPShape/: CMakeLists.txt  Circle.cpp  Circle.h  Shape.cpp  Shape.h  main.cpp
InheritanceTest/: Animal.h  CMakeLists.txt
OOP/Shape/: CMakeLists.txt  Circles.h  Shape.h  ThreeDShape.cpp  ThreeDShape.h  Triangles.h  TwoDShape.h  main.cpp
OnlineShop22.01/: CMakeLists.txt
OperatorOveerloading/: CMakeLists.txt
OperatorOveerloading/Date/: Box.cpp  Box.h  CMakeLists.txt  Date.cpp  Date.h  main.cpp
OperatorOveerloading/PhoneNumber/: CMakeLists.txt  PhoneNumber.cpp  PhoneNumber.h  main.cpp
Polymorphism/: CommissionEmployee.h
Regtangle/: Point.cpp  Point.h  Rectangle.h  main.cpp
School/: Student.cpp  Teachers.h  main.cpp
Scool/: Discipline.cpp  School.cpp  Student.cpp
Shape/: Circles.cpp  Circles.h  Rectangles.cpp  Rectangles.h  Shape.cpp  Shape.h  Square.cpp  Triangles.cpp  TwoDShape.h
Team/: CMakeLists.txt  Team.cpp  Team.h
asd/: CMakeLists.txt
exp21.01/: Car.h
footballFederation/: Admin.cpp  Admin.h  CMakeLists.txt  main.cpp
parking15.01/: CMakeLists.txt
untitled123/: CMakeLists.txt  main.cpp
(+135 files in other folders)
