cmake_minimum_required(VERSION 3.27)
project(Basic)

set(CMAKE_CXX_STANDARD 14)

add_executable(Basic
        Array/ArraySize.cpp
        Array/ArrElement.cpp
        Array/AverageValue.cpp
        Array/ChangeNumber.cpp
        Array/ex1.cpp
        Array/lesna.cpp
        Array/MagicCube.cpp
        Array/MaxMin.cpp
        Array/MaxMinElements.cpp
        Array/mNk.cpp
        Array/MonthsDays.cpp
        Array/SumColms.cpp
        Array/trudna.cpp
        Array/trudna2.cpp
        Array/TwoDimensionalArray.cpp
        Array/TwoFour.cpp
        Array/UmerenoTrudna.cpp
        Array/UmerenoTrudna2.cpp)
